# clearhead-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  bb.edn
.clj-kondo/.cache/v1/clj/: cliche..transit.json  cliche.c.transit.json  cliche.cl.transit.json  cliche.cli.transit.json  cliche.m.transit.json  cliche.ma.transit.json  cliche.mai.transit.json  cliche.main.transit.json  clojure.core.protocols.transit.json  clojure.core.reducers.transit.json  clojure.core.server.transit.json  clojure.core.specs.alpha.transit.json  clojure.core.transit.json  clojure.data.transit.json  clojure.datafy.transit.json  clojure.edn.transit.json  clojure.inspector.transit.json  clojure.instant.transit.json  clojure.java.basis.impl.transit.json  clojure.java.basis.transit.json  clojure.java.browse-ui.transit.json  clojure.java.browse.transit.json  clojure.java.io.transit.json  clojure.java.javadoc.transit.json  clojure.java.process.transit.json  clojure.java.shell.transit.json  clojure.main.transit.json  clojure.math.transit.json  clojure.parallel.transit.json  clojure.pprint.transit.json  clojure.reflect.transit.json  clojure.repl.deps.transit.json  clojure.repl.transit.json  clojure.set.transit.json  clojure.spec.alpha.transit.json  clojure.spec.gen.alpha.transit.json  clojure.spec.test.alpha.transit.json  clojure.stacktrace.transit.json  clojure.string.transit.json  clojure.template.transit.json  (+9 more)
.cpcache/: 1651507407.basis  1651507407.cp  3814822858.basis  3814822858.cp
.lsp/.cache/: db.transit.json
docs/: schema.json
examples/default/: settings.toml
src/: argparser.rs  config.rs  entities.rs  environment_reader.rs  lib.rs  main.rs  model.rs  settings.rs  treesitter.rs
src/cliche/: main.clj
src/lib/: entities.rs
systemd/: bb-nrepl.service  bb-nrepl.socket
test/: entities.rs  lib.rs
tests/: experiment.rs  lib.rs
