[package]
name = "cliche"
description = "A CLI tool and library for working with the clearhead framework"
version = "0.1.0"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ClearHeadToDo-Devs/tree-sitter-actions.git"

[dependencies]
serde = { version = "*", features = ["derive"] }
clap = {version= "*", features = ["derive"]}
config = "*"
dirs = "*"
serde_json = "*"
rpds = "*"
