[package]
name = "cliche"
description = "A CLI tool and library for working with the clearhead framework"
version = "0.1.1"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ClearHeadToDo-Devs/tree-sitter-actions.git"

[dependencies]
clap = {version= "*", features = ["derive"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
config = "*"
dirs = "*"
tree-sitter = "*"
tree-sitter-actions = "*"
chrono = { version = "*", features = ["serde"] }
reqwest = {version = "*", features = ["blocking"]}

[dependencies.uuid]
version = "*"
# Lets you generate random UUIDs
features = [
  "serde",
    "v7",
]

