[package]
name = "cliche"
description = "A CLI tool and library for working with the clearhead framework"
version = "0.1.1"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ClearHeadToDo-Devs/tree-sitter-actions.git"

[dependencies]
clap = {version= "4.0", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
dirs = "5.0"
tree-sitter = "0.25.1"
tree-sitter-actions = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = {version = "0.11", features = ["blocking"]}

[dependencies.uuid]
version = "1.0"
# Lets you generate random UUIDs
features = [
  "serde",
    "v7",
]

